@@ -125,11 +125,16 @@ Backward Incompatibilities
   ``request.exception`` and ``request.exc_info`` themselves to indicate
   the exception that was squashed when generating the response.
 
+  Similar behavior occurs with ``request.invoke_exception_view`` in which
+  the exception properties are set to reflect the exception if a response
+  is successfully generated by the method.
+
   This is a very minor incompatibility. Most tweens right now would give
   priority to the raised exception and ignore ``request.exception``. This
   change just improves and clarifies that bookkeeping by trying to be
   more clear about the relationship between the response and its squashed
-  exception. See https://github.com/Pylons/pyramid/pull/3029
+  exception. See https://github.com/Pylons/pyramid/pull/3029 and
+  https://github.com/Pylons/pyramid/pull/3031
 
 Documentation Changes
 ---------------------
